<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.constructor.CarConstActivity"
    android:background="@color/dark">

    <include
        android:id="@+id/toolbar_view_constructor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <RelativeLayout
        android:id="@+id/rl_images_const_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_view_constructor"
        >

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_car_const_images"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_images_const_indicators"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            android:background="@color/transparent"
            app:tabBackground="@drawable/tab_dots_selector"
            android:layout_alignBottom="@+id/vp_car_const_images" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mat_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_images_const_container">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <HorizontalScrollView
            android:id="@+id/sv_date_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/container_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_filter_dates"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_const_1"
                    style="@style/LowerCaseTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/const_1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/blue"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_const_2"
                    style="@style/LowerCaseTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/const_2"
                    android:backgroundTint="@color/gray"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_const_3"
                    style="@style/LowerCaseTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/const_3"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/gray"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_const_4"
                    style="@style/LowerCaseTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/const_4"
                    android:backgroundTint="@color/gray"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_const_5"
                    style="@style/LowerCaseTextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/const_5"
                    android:backgroundTint="@color/gray"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="8dp"
                    />

            </LinearLayout>

        </HorizontalScrollView>

        <View
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_const_sett"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mat_btn_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>