<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.carDetail.CarDetailActivity"
    android:background="@color/dark">

    <include
        android:id="@+id/toolbar_view_car_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_view_car_details"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_images_container"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/vp_car_images"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_centerInParent="true"/>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_images_indicators"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    android:background="@color/transparent"
                    app:tabBackground="@drawable/tab_dots_selector"
                    android:layout_alignBottom="@+id/vp_car_images" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/price_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_images_container">

                <TextView
                    android:id="@+id/tv_price_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_price_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/price_subtitle"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"/>

                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/speed_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_container">

                <TextView
                    android:id="@+id/tv_speed_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_speed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_subtitle"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"/>

                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/power_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speed_container">

                <TextView
                    android:id="@+id/tv_power_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_power_value_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hp_subtitle"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"/>

                <View
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fuel_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/power_container"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/iv_car_fuel"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:padding="12dp"
                        android:src="@drawable/icon_fuel"
                        android:background="@drawable/circle_border"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"/>

                    <TextView
                        android:id="@+id/tv_fuel_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/iv_car_fuel"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/tv_fuel_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fuel_subtitle"
                        android:textSize="16sp"
                        android:layout_toEndOf="@+id/iv_car_fuel"
                        android:layout_below="@+id/tv_fuel_value"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/white"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp">

                    <ImageView
                        android:id="@+id/iv_car_co2"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:padding="12dp"
                        android:src="@drawable/icon_co2"
                        android:background="@drawable/circle_border"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"/>

                    <TextView
                        android:id="@+id/tv_co2_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/iv_car_co2"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/tv_co2_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/co2_subtitle"
                        android:textSize="16sp"
                        android:layout_toEndOf="@+id/iv_car_co2"
                        android:layout_below="@+id/tv_co2_value"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/white"/>

                </RelativeLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuel_container"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp">


                <LinearLayout
                    android:id="@+id/ll_zh"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/view1"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp">

                    <TextView
                        android:id="@+id/tv_zh_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/tv_zh_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/zh_subtitle"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>

                </LinearLayout>

                <View
                    android:id="@+id/view1"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:background="@color/gray"
                    app:layout_constraintStart_toEndOf="@+id/ll_zh"
                    app:layout_constraintEnd_toStartOf="@+id/ll_wd"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/ll_zh"/>

                <LinearLayout
                    android:id="@+id/ll_wd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toEndOf="@+id/view1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="8dp">

                    <TextView
                        android:id="@+id/tv_wd_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/tv_wd_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/wd_subtitle"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>